feat: implement reload and placeholders