@@ -32,14 +32,21 @@ public class HologramManager {
     }
 
     public void initialize() {
-        if (!plugin.getConfig().getBoolean("holograms.enabled", false)) {
+        plugin.getLogger().info("HologramManager: initialize() called");
+
+        boolean enabled = plugin.getConfig().getBoolean("holograms.enabled", false);
+        plugin.getLogger().info("HologramManager: holograms.enabled=" + enabled);
+        if (!enabled) {
+            plugin.getLogger().info("HologramManager: Holograms are disabled in config; skipping initialization.");
             return;
         }
 
         // 先清理旧的全息图，以防插件重载
+        plugin.getLogger().info("HologramManager: Cleaning up existing holograms before (re)initialization");
         cleanup();
 
         String mode = plugin.getConfig().getString("holograms.display-mode", "SINGLE").toUpperCase();
+        plugin.getLogger().info("HologramManager: display-mode=" + mode);
 
         if ("SINGLE".equals(mode)) {
             setupSingleMode();
@@ -47,67 +54,89 @@ public class HologramManager {
             setupMultipleMode();
         }
 
-        long refreshInterval = plugin.getConfig().getLong("holograms.refresh-interval-seconds", 10) * 20L;
+        long refreshIntervalSeconds = plugin.getConfig().getLong("holograms.refresh-interval-seconds", 10);
+        plugin.getLogger().info("HologramManager: refresh-interval-seconds=" + refreshIntervalSeconds);
+        long refreshInterval = refreshIntervalSeconds * 20L;
         this.refreshTask = plugin.getServer().getScheduler().runTaskTimer(plugin, this::updateAllHolograms, 0L, refreshInterval);
+        plugin.getLogger().info("HologramManager: Scheduled refresh task with interval ticks=" + refreshInterval);
     }
 
     private void setupSingleMode() {
         Location loc = parseLocation(plugin.getConfig().getString("holograms.single-display.location"));
         if (loc == null) {
-            plugin.getLogger().severe("Single hologram location is invalid!");
+            plugin.getLogger().severe("Single hologram location is invalid! Check 'holograms.single-display.location' in config.");
             return;
         }
+        plugin.getLogger().info("HologramManager: Creating single hologram at " + loc);
         TextDisplay hologram = createHologram(loc);
         activeHolograms.add(hologram);
-
-        long rotationInterval = plugin.getConfig().getLong("holograms.single-display.rotation-interval-seconds", 5) * 20L;
+        long rotationIntervalSeconds = plugin.getConfig().getLong("holograms.single-display.rotation-interval-seconds", 5);
+        long rotationInterval = rotationIntervalSeconds * 20L;
+        plugin.getLogger().info("HologramManager: Scheduling rotation task for single hologram, interval-seconds=" + rotationIntervalSeconds + ", ticks=" + rotationInterval);
         this.rotationTask = plugin.getServer().getScheduler().runTaskTimer(plugin, this::rotateSingleHologram, rotationInterval, rotationInterval * 2);
     }
 
     private void setupMultipleMode() {
         ConfigurationSection section = plugin.getConfig().getConfigurationSection("holograms.multiple-displays");
         if (section == null) return;
-
+        plugin.getLogger().info("HologramManager: Setting up multiple holograms for leaderboard keys: " + leaderboardKeys);
         for (String key : leaderboardKeys) {
-            Location loc = parseLocation(section.getString(key + ".location"));
+            String keyPath = key + ".location";
+            String locStr = section.getString(keyPath);
+            plugin.getLogger().info("HologramManager: multiple-displays." + keyPath + " = " + locStr);
+            Location loc = parseLocation(locStr);
             if (loc != null) {
+                plugin.getLogger().info("HologramManager: Creating hologram for key='" + key + "' at " + loc);
                 TextDisplay hologram = createHologram(loc);
                 hologram.setMetadata("leaderboard_key", new org.bukkit.metadata.FixedMetadataValue(plugin, key));
                 activeHolograms.add(hologram);
+            } else {
+                plugin.getLogger().warning("HologramManager: Could not parse location for key='" + key + "' (value=" + locStr + ")");
             }
         }
     }
 
     private void rotateSingleHologram() {
         if (activeHolograms.isEmpty()) return;
-
-        TextDisplay hologram = activeHolograms.getFirst();
+        // use index 0 for the single hologram
+        TextDisplay hologram = activeHolograms.get(0);
         String key = leaderboardKeys.get(currentRotationIndex);
+        plugin.getLogger().info("HologramManager: rotateSingleHologram: rotating to index=" + currentRotationIndex + " key=" + key);
         updateHologramContent(hologram, key);
 
         currentRotationIndex = (currentRotationIndex + 1) % leaderboardKeys.size();
     }
 
     private void updateAllHolograms() {
-        if (activeHolograms.isEmpty()) return;
+        if (activeHolograms.isEmpty()) {
+            plugin.getLogger().fine("HologramManager: updateAllHolograms called but no active holograms present");
+            return;
+        }
 
         String mode = plugin.getConfig().getString("holograms.display-mode", "SINGLE").toUpperCase();
+        plugin.getLogger().info("HologramManager: updateAllHolograms called, mode=" + mode + ", activeCount=" + activeHolograms.size());
 
         if ("SINGLE".equals(mode)) {
             // 在单模式下，刷新任务会触发一次轮换，以确保数据最新
+            plugin.getLogger().fine("HologramManager: SINGLE mode - rotating single hologram during refresh");
             rotateSingleHologram();
         } else {
             for (TextDisplay hologram : activeHolograms) {
                 if (hologram.hasMetadata("leaderboard_key")) {
                     String key = hologram.getMetadata("leaderboard_key").get(0).asString();
+                    plugin.getLogger().fine("HologramManager: Updating hologram for key=" + key + " at entityId=" + hologram.getEntityId());
                     updateHologramContent(hologram, key);
+                } else {
+                    plugin.getLogger().warning("HologramManager: Found hologram without 'leaderboard_key' metadata, entityId=" + hologram.getEntityId());
                 }
             }
         }
     }
 
     private void updateHologramContent(TextDisplay hologram, String key) {
+        plugin.getLogger().fine("HologramManager: updateHologramContent called for key='" + key + "'");
         List<PlayerStats> topPlayers = dataManager.getTopPlayers(key, 10);
+        plugin.getLogger().info("HologramManager: Found topPlayers.size()=" + topPlayers.size() + " for key='" + key + "'");
         String title = plugin.getConfig().getString("messages.title-" + key.toLowerCase(), "Leaderboard");
         StringBuilder contentBuilder = new StringBuilder();
         contentBuilder.append(format(title + "\n\n&r"));
@@ -122,6 +151,7 @@ public class HologramManager {
         }
 
         hologram.setText(contentBuilder.toString());
+        plugin.getLogger().fine("HologramManager: Hologram text updated for key='" + key + "'");
     }
 
     private String formatRankEntry(int rank, PlayerStats stats, String key) {
@@ -152,7 +182,18 @@ public class HologramManager {
     }
 
     private TextDisplay createHologram(Location location) {
-        return location.getWorld().spawn(location, TextDisplay.class, holo -> {
+        if (location == null) {
+            plugin.getLogger().severe("HologramManager: createHologram called with null location");
+            throw new IllegalArgumentException("location cannot be null");
+        }
+        World world = location.getWorld();
+        if (world == null) {
+            plugin.getLogger().severe("HologramManager: createHologram: world not found for location=" + location);
+            throw new IllegalArgumentException("World not found for location");
+        }
+
+        plugin.getLogger().info("HologramManager: Spawning TextDisplay at " + location + " in world=" + world.getName());
+        return world.spawn(location, TextDisplay.class, holo -> {
             holo.setBillboard(Display.Billboard.VERTICAL);
             holo.setText("");
             holo.setAlignment(TextDisplay.TextAlignment.CENTER);
@@ -164,11 +205,17 @@ public class HologramManager {
         // 取消任务
         if (refreshTask != null) refreshTask.cancel();
         if (rotationTask != null) rotationTask.cancel();
+        plugin.getLogger().info("HologramManager: cleanup() - cancelling tasks and removing " + activeHolograms.size() + " holograms");
 
         // 移除实体
         activeHolograms.forEach(hologram -> {
-            if (hologram.isValid()) {
-                hologram.remove();
+            try {
+                if (hologram.isValid()) {
+                    plugin.getLogger().fine("HologramManager: Removing hologram entityId=" + hologram.getEntityId());
+                    hologram.remove();
+                }
+            } catch (Exception e) {
+                plugin.getLogger().warning("HologramManager: Exception while removing hologram: " + e.getMessage());
             }
         });
         activeHolograms.clear();
@@ -178,12 +225,21 @@ public class HologramManager {
         if (locString == null || locString.isEmpty()) return null;
         try {
             String[] parts = locString.split(",");
+            if (parts.length < 4) {
+                plugin.getLogger().warning("HologramManager: parseLocation - invalid location string (not enough parts): " + locString);
+                return null;
+            }
             World world = Bukkit.getWorld(parts[0]);
             double x = Double.parseDouble(parts[1]);
             double y = Double.parseDouble(parts[2]);
             double z = Double.parseDouble(parts[3]);
+            if (world == null) {
+                plugin.getLogger().warning("HologramManager: parseLocation - world not found: " + parts[0] + " for location string: " + locString);
+                return null;
+            }
             return new Location(world, x, y, z);
         } catch (Exception e) {
+            plugin.getLogger().warning("HologramManager: Failed to parse location string '" + locString + "' : " + e.getMessage());
             return null;
         }
     }
